# EXAM_HELP_RAG

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  RENDER_DEPLOYMENT.md  docker-compose.yml  render.yaml
backend/: requirements.txt
backend/app/: config.py  database.py  main.py  models.py  prompts.py
backend/app/services/: auth.py  groq_client.py  pdf_loader.py  rag.py  test_service.py  vector_store.py
backend/tests/: conftest.py  test_auth_and_ownership.py  test_database_adapter.py  test_groq_client.py  test_retrieval.py  test_test_persistence.py  test_upload_validation.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AppShell.tsx  MermaidBlock.tsx  SourceList.tsx  StatusPill.tsx
frontend/src/pages/: AuthPage.tsx  Dashboard.tsx  DocumentsPage.tsx  GenerateTestPage.tsx  ResultsPage.tsx  StudyModePage.tsx  TakeTestPage.tsx  UploadPage.tsx
llm-dataset-curation-pipeline/: .gitignore  README.md  pyproject.toml
llm-dataset-curation-pipeline/app/: streamlit_app.py
llm-dataset-curation-pipeline/configs/: seeds.example.yml
llm-dataset-curation-pipeline/src/curation_pipeline/: __init__.py  cleaner.py  cli.py  config.py  crawler.py  dedup.py  exporter.py  extractor.py  io_utils.py  language.py  quality.py  report.py  schema.py
llm-dataset-curation-pipeline/tests/: test_cleaner.py  test_cli_smoke.py  test_dedup.py  test_exporter.py  test_quality.py
llm-dataset-curation-pipeline/tests/fixtures/: page1.html  page2.html
